8bit per channel for blending of rgb565 surfaces

due to rounding errors blending of white on white in rgb565 did not
result in white but green or gray artifacts. This patch fixes this by
using 8bit operations for sourceOver (alpha) and source (due to anti
aliasing) blending.

Task-number: QTBUG-20681
Reviewed-by: Samuel Rødal